<resources>
    <string name="app_name">WeatherAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="city_info_activity">Weather informations</string>
    <string name="add_city_activity">Add new city</string>
    <string name="empty_cities_list">List is empty</string>
    <string name="city_name">City name</string>
    <string name="add_city">Add</string>
    <string name="searchButton">Search</string>
    <string name="enter_city_name">Invalid city name</string>
    <string name="city_added">City successfully added</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="description">Description:</string>
    <string name="undo_delete">City deleted</string>
    <string name="undo">Undo</string>
    <string name="empty_list">List is empty</string>
    <string name="empty_search">Nothing to add</string>
    <string name="internet">No Internet access</string>
</resources>
