<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tomasevic.weatherassignment.AddCityActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="55">

            <EditText
                android:id="@+id/citySearchName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city_name"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addCityButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:text="@string/add_city"/>
        <Button
            android:id="@+id/searchButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/searchButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/cityResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

</LinearLayout>
