<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.tomasevic.weatherassignment.CityInfoActivity">

    <TextView
        android:id="@+id/cityNameInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:textSize="35dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:orientation="horizontal">

        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical"
        android:layout_marginRight="3dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18dp"
                android:text="@string/temperature"
                android:gravity="right"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18dp"
                android:text="@string/humidity"
                android:gravity="right"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18dp"
                android:text="@string/description"
                android:gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:layout_marginLeft="3dp">
            <TextView
                android:id="@+id/cityTempInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/cityHumidityInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/cityDescriptionInfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
